--- a/cinema/templates/cinema/index.html
+++ b/cinema/templates/cinema/index.html
@@ -1,27 +1,34 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Directors Cinema</title>
-</head>
-<body>
+{% extends 'cinema/base.html' %}
 
-<div>
-    <h1><a href="/">Menu de directores de cine</a> </h1>
-</div>
-
-{% for director in directors %}
-    <li>
-        <li><p>Director: {{ director.fisrt_name }} {{ director.last_name }}</p></li>
+{% block content %}
+    {% for director in directors %}
+        <h3>Director: {{ director.fisrt_name }} {{ director.last_name }}</h3>
         {% if director.movie.all %}
-            {% for movie in director.movie.all %}
-            <ul>{{movie.title}}</ul>
-            {% endfor %}
+            <table class="table caption-top table-hover table-borderless">
+                <caption>List of films</caption>
+                <thead class="table-dark">
+                    <th>Title</th>
+                    <th>Genre</th>
+                    <th>Release Date</th>
+                    <th>Description</th>
+                </thead>
+                <tbody>
+                    {% for movie in director.movie.all %}
+                        <tr>
+                            <td><a href="{% url 'movie_detail' pk=movie.pk %}" >{{movie.title}}</a></td>
+                            <td>
+                                {% for genre in movie.genre.all %}
+                                    {{ genre.name }}<br>
+                                {% endfor %}
+                            </td>
+                            <td>{{ movie.published_date }}</td>
+                            <td>{{ movie.description }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         {% else %}
             <p>No tiene peliculas</p>
         {% endif %}
-    </div>
-{% endfor %}
-
-</body>
-</html>
+    {% endfor %}
+{% endblock %}
